<resources>
    <string name="app_name">Lloyd\'s App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="lloyd_portfolio_header">Lloyd\'s Nano-degree Portfolio</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

</resources>
