<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" tools:context=".MainActivity"
    android:background="#F1F8E9">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lloyd_portfolio_header"
        android:id="@+id/txtPortfolioHeader"
        android:layout_gravity="center_horizontal"
        android:textColor="#33691E"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btnSpotifyStreamer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="#9CCC65"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btnScoresApp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#9CCC65"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btnLibraryApp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#9CCC65"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btnBuildItBigger"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#9CCC65"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btnXYZReader"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#9CCC65"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btnCapstone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#558B2F"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>
